--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>  
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Heath Portfolio</title>  
+    <title>Heath Portfolio</title>
     <meta name="description" content="Portfolio for Web-Developer" />
     <meta name="author" content="HeathChang" />
-    <link rel="icon" type="image/png" href="imgs/logo.png"
+    <link rel="icon" type="image/png" href="imgs/logo.png" />
     <script
       src="https://kit.fontawesome.com/8323a40432.js"
       crossorigin="anonymous"
@@ -17,9 +17,41 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,600&display=swap"
       rel="stylesheet"
     />
-  <link rel="stylesheet" href="style.css">
-  <script src="main.js" defer> </script>
-  
+    <link rel="stylesheet" href="style.css" />
+    <script src="main.js" defer></script>
   </head>
-  <body></body>
-</html> 
+  <body>
+    <!--navbar-->
+    <nav id="navbar">
+      <div class="navbar__logo">
+        <link rel="icon" type="image/png" href="imgs/logo.png" />
+        <a href="#">HeathChang </a>
+      </div>
+      <div class="nav__menu">
+        <ul class="navbar__menu">
+          <li class="navbar__menu__item">Home</li>
+          <li class="navbar__menu__item">About</li>
+          <li class="navbar__menu__item">Skills</li>
+          <li class="navbar__menu__item">My Work</li>
+          <li class="navbar__menu__item">testimonials</li>
+          <li class="navbar__menu__item">Contact</li>
+        </ul>
+      </div>
+    </nav>
+
+    <!--about-->
+    <section id="about"></section>
+
+    <!--Skills-->
+    <section id="skills"></section>
+
+    <!--work-->
+    <section id="work"></section>
+
+    <!--testimonials-->
+    <section id="testimonials"></section>
+
+    <!--contact-->
+    <section id="contact"></section>
+  </body>
+</html>
