--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -24,7 +24,7 @@
     <!--navbar-->
     <nav id="navbar">
       <div class="navbar__logo">
-        <link rel="icon" type="image/png" href="imgs/logo.png" />
+        <img class="icon" src="imgs/logo.png" alt="logo" />
         <a href="#">HeathChang </a>
       </div>
       <div class="nav__menu">
