--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="CSS/style.css" />
     <script src="main.js" defer></script>
   </head>
   <body>
@@ -39,14 +39,133 @@
       </div>
     </nav>
 
+    <!--Home-->
+    <section id="home">
+      <img src="imgs/myPhoto.jpg" alt="Heath Photo" class="home__avatar" />
+      <h1 class="home__title">
+        Hello <br />
+        My name is Heath Chang (장현수)
+      </h1>
+      <h2 class="home__description">
+        was a Student, am a Student, will be a Student
+      </h2>
+      <button class="home__contact">Contact me</button>
+    </section>
+
     <!--about-->
-    <section id="about"></section>
+    <section id="about">
+      <h1>About me</h1>
+      <p>Hello My name is Heath Chnag</p>
+      <div class="about__majors">
+        <div class="major_icon"><i class="fab fa-html5"></i></div>
+        <div class="major_title">Front-end</div>
+        <div class="major_description">HTML,CSS,JavaScript</div>
+      </div>
+      <div class="about__majors">
+        <div class="major_icon"><i class="fas fa-server"></i></div>
+        <div class="major_title">Back-end</div>
+        <div class="major_description">Java, JavaScript, Servlet</div>
+      </div>
+      <div class="about__jobs">
+        <div class="job">
+          <div class="major_icon"><i class="fas fa-university"></i>          
+          <p class="job__name">상명대학교</p>
+          <p class="job__period">13.03~ 20.02</p>
+        </div>
+      </div>2
+    </section>
 
     <!--Skills-->
-    <section id="skills"></section>
+    <section id="skills">
+      <h1>Skills</h1>
+      <h2>Skills & Attributes</h2>
+      <p>
+        Passion for learning new technologies. Capable of woring within a team environment and independently.
+        Ability to plan and time schedule, work under strict time pressure and adapt quickly when needed.
+      </p>
+    <div class="skillset">
+      <div class="skillset_left">
+        <h3 class="skillset_title">Skills</h3>
+        <div class="skill">
+          <div class="skill_description">
+            <span>JAVA</span>
+            <span>70%</span>
+          </div>
+          <div class="skill_description">
+            <span>JSP</span>
+            <span>50%</span>
+          </div>
+          <div class="skill_description">
+            <span>jQuery</span>
+            <span>50%</span>
+          </div>
+          <div class="skill_description">
+            <span>HTML/CSS</span>
+            <span>40%</span>
+          </div>
+          <div class="skill_description">
+            <span>JS</span>
+            <span>50%</span>
+          </div>
+          <div class="skill_description">
+            <span>SQL</span>
+            <span>70%</span>
+          </div>
+          <div class="skill_description">
+            <span>Python_Data Crawling</span>
+            <span>50%</span>
+          </div>
+
+          <div class="skill_bar">
+            <div class="skill_value"></div>
+          </div>
+        </div>
+      </div>
+      <div class="skillset_right">
+      <div class="tools">
+        <h3 class="skillset_title">Tools</h3>
+        <ul class="tools_list">
+          <li><span>Eclipse</span></li>
+          <li><span>Visual Studio Code</span></li>
+          <li><span>Git & GitHub</span></li>
+          <li><span>Oracle SQL</span></li>
+        </ul>
+      </div>
+      <div class="etc">
+        <h3 class="skillset_title">etc</h3>
+        <ul class="etc_list">
+          <li><span>Microsoft Office Master</span></li>
+          <li><span>Advanced Data Analytics Semi-Professional (ADsP)</span></li>
+          <li><span>Korean & English & Vietnamese</span></li>
+
+        </ul>
+      </div>
+      </div>
+    </div>
+    
+    </section>
 
     <!--work-->
-    <section id="work"></section>
+    <section id="work">
+      <h1>My Work</h1>
+      <h3>Projects</h3>
+      <div class="work_categories">
+        <button class="category__btn">ALL <span class="category_count">4</span></button>
+        <button class="category__btn">FRONT-end<span class="category_count">2</span></button>
+        <button class="category__btn">BACK-end<span class="category_count">2</span></button>
+      
+      </div>
+
+      <div class="work_projects">
+        <a href="https://github.com/HeathChang/Acorn_class/tree/main/Projects/ShopMiniMall" class="shopping_mall" target="blank">
+        <img class="project_img" src="imgs/projects/shoppingMall.png" alt="shopping_mall"> 
+        <div class="project_description">
+          <h3> Shopping Mall</h3>
+          <span>My first web project</span>
+        </div>
+        </a>
+      </div>
+    </section>
 
     <!--testimonials-->
     <section id="testimonials"></section>
