--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -168,9 +168,45 @@
     </section>
 
     <!--testimonials-->
-    <section id="testimonials"></section>
+    <section id="testimonials">
+    <h1>Testimonials</h1>
+    <h3>See what they say about me</h3>
+    <div class="testimonials">
+      <div class="testimonial">
+        <img src="imgs/testimonial/people1.jpg" alt="people" class="testimonial_avartar">
+        <div class="testimonial_speachBubble">
+          <p>
+            Hello :)
+          </p>
+          <p class="name"><a href="">His name</a>/Place he works</p>
+        </div>
+      </div>
+      <div class="testimonial">
+        <img src="imgs/testimonial/people1.jpg" alt="people" class="testimonial_avartar">
+        <div class="testimonial_speachBubble">
+          <p>
+            Hello :)
+          </p>
+          <p class="name"><a href="">His name</a>/Place he works</p>
+        </div>
+      </div>
+    </div>
+    
+    </section>
 
     <!--contact-->
-    <section id="contact"></section>
+    <section id="contact">
+      <h1 class="contact_title">Let's talk</h1>
+      <h2 class="contact_email">Jannhyunsoo@gmail.com</h2>
+      <div class="contact_links">
+        <a href="https://github.com/HeathChang" target="_blank">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="https://blog.naver.com/jannhyunsoo" target="_blank">
+          <i class="fab fa-blogger"></i>
+        </a>
+      </div>
+      <p class="contatc_rights">Copyrightⓒ2021 HeathChang All rights reserved.</p>
+    </section>
   </body>
 </html>
