--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -32,9 +32,10 @@
         <img class="icon" src="imgs/logo.png" alt="logo" />
         <a href="#">HeathChang </a>
       </div>
+
       <div class="nav__menu">
         <ul class="navbar__menu">
-          <li class="navbar__menu__item">Home</li>
+          <li class="navbar__menu__item active">Home</li>
           <li class="navbar__menu__item">About</li>
           <li class="navbar__menu__item">Skills</li>
           <li class="navbar__menu__item">My Work</li>
