--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -30,7 +30,7 @@
     <nav id="navbar">
       <div class="navbar__logo">
         <img class="icon" src="imgs/logo.png" alt="logo" />
-        <a href="#">HeathChang </a>
+        <a href="#" id="navbar__myName">HeathChang </a>
       </div>
 
       <div class="nav__menu">
