--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -59,7 +59,7 @@
     </section>
 
     <!--about-->
-    <section id="about" class="section">
+    <section id="about" class="section section_container">
       <h1>About me</h1>
       <p>Hello My name is Heath Chnag</p>
 
@@ -124,71 +124,108 @@
     </section>
 
     <!--Skills-->
-    <section id="skills">
-      <h1>Skills</h1>
-      <h2>Skills & Attributes</h2>
-      <p>
-        Passion for learning new technologies. Capable of woring within a team
-        environment and independently. Ability to plan and time schedule, work
-        under strict time pressure and adapt quickly when needed.
-      </p>
-      <div class="skillset">
-        <div class="skillset_left">
-          <h3 class="skillset_title">Skills</h3>
-          <div class="skill">
-            <div class="skill_description">
-              <span>JAVA</span>
-              <span>70%</span>
+    <section id="skills" class="section">
+      <div class="section_container">
+        <h1>Skills</h1>
+        <h2>Skills & Attributes</h2>
+        <p>
+          Passion for learning new technologies. Capable of woring within a team
+          environment and independently.<br />
+          Ability to plan and time schedule, work under strict time pressure and
+          adapt quickly when needed.
+        </p>
+        <div class="skillset">
+          <div class="skillset_left">
+            <h3 class="skillset_title">Skills</h3>
+            <div class="skill">
+              <div class="skill_description">
+                <span>JAVA</span>
+                <span>60%</span>
+              </div>
+              <div class="skill_bar">
+                <div class="skill_value" style="width: 60%"></div>
+              </div>
             </div>
-            <div class="skill_description">
-              <span>JSP</span>
-              <span>50%</span>
+            <div class="skill">
+              <div class="skill_description">
+                <span>Servlet/JSP</span>
+                <span>60%</span>
+              </div>
+              <div class="skill_bar">
+                <div class="skill_value" style="width: 60%"></div>
+              </div>
             </div>
-            <div class="skill_description">
-              <span>jQuery</span>
-              <span>50%</span>
-            </div>
-            <div class="skill_description">
-              <span>HTML/CSS</span>
-              <span>40%</span>
-            </div>
-            <div class="skill_description">
-              <span>JS</span>
-              <span>50%</span>
-            </div>
-            <div class="skill_description">
-              <span>SQL</span>
-              <span>70%</span>
-            </div>
-            <div class="skill_description">
-              <span>Python_Data Crawling</span>
-              <span>50%</span>
+            <div class="skill">
+              <div class="skill_description">
+                <span>jQuery</span>
+                <span>50%</span>
+              </div>
+              <div class="skill_bar">
+                <div class="skill_value" style="width: 50%"></div>
+              </div>
             </div>
 
-            <div class="skill_bar">
-              <div class="skill_value"></div>
+            <div class="skill">
+              <div class="skill_description">
+                <span>HTML/CSS</span>
+                <span>50%</span>
+              </div>
+              <div class="skill_bar">
+                <div class="skill_value" style="width: 50%"></div>
+              </div>
+            </div>
+
+            <div class="skill">
+              <div class="skill_description">
+                <span>JavaScript</span>
+                <span>50%</span>
+              </div>
+              <div class="skill_bar">
+                <div class="skill_value" style="width: 50%"></div>
+              </div>
+            </div>
+
+            <div class="skill">
+              <div class="skill_description">
+                <span>SQL</span>
+                <span>70%</span>
+              </div>
+              <div class="skill_bar">
+                <div class="skill_value" style="width: 70%"></div>
+              </div>
+            </div>
+
+            <div class="skill">
+              <div class="skill_description">
+                <span>Python:Data Crawling</span>
+                <span>60%</span>
+              </div>
+              <div class="skill_bar">
+                <div class="skill_value" style="width: 60%"></div>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="skillset_right">
-          <div class="tools">
-            <h3 class="skillset_title">Tools</h3>
-            <ul class="tools_list">
-              <li><span>Eclipse</span></li>
-              <li><span>Visual Studio Code</span></li>
-              <li><span>Git & GitHub</span></li>
-              <li><span>Oracle SQL</span></li>
-            </ul>
-          </div>
-          <div class="etc">
-            <h3 class="skillset_title">etc</h3>
-            <ul class="etc_list">
-              <li><span>Microsoft Office Master</span></li>
-              <li>
-                <span>Advanced Data Analytics Semi-Professional (ADsP)</span>
-              </li>
-              <li><span>Korean & English & Vietnamese</span></li>
-            </ul>
+
+          <div class="skillset_right">
+            <div class="tools">
+              <h3 class="skillset_title">Tools</h3>
+              <ul class="tools_list">
+                <li><span>Eclipse</span></li>
+                <li><span>Visual Studio Code</span></li>
+                <li><span>Git & GitHub</span></li>
+                <li><span>Oracle SQL</span></li>
+              </ul>
+            </div>
+            <div class="etc">
+              <h3 class="skillset_title">etc</h3>
+              <ul class="etc_list">
+                <li><span>Microsoft Office Master</span></li>
+                <li>
+                  <span>Advanced Data Analytics Semi-Professional (ADsP)</span>
+                </li>
+                <li><span>Korean & English & Vietnamese</span></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
