--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -90,7 +90,7 @@
       </div>
 
       <div class="about_place">
-        <div class="univ">
+        <div class="univPlace">
           <img
             src="imgs/place/univLogo.png"
             alt="SangMyung"
@@ -109,7 +109,7 @@
           </div>
         </div>
 
-        <div class="work">
+        <div class="workPlace">
           <img src="imgs/place/workLogo.jpg" alt="Ubits" class="work__logo" />
           <div class="work_description">
             <p class="work__name">유비츠</p>
@@ -232,7 +232,7 @@
     </section>
 
     <!--work-->
-    <section id="work">
+    <section id="work" class="work">
       <h1>My Work</h1>
       <h3>Projects</h3>
       <div class="work_categories">
@@ -249,18 +249,48 @@
 
       <div class="work_projects">
         <a
-          href="https://github.com/HeathChang/Acorn_class/tree/main/Projects/ShopMiniMall"
-          class="shopping_mall"
+          href="https://github.com/AconProject/PGservlet?organization=AconProject&organization=AconProject"
+          class="project"
           target="blank"
         >
           <img
             class="project_img"
-            src="imgs/projects/shoppingMall.png"
+            src="imgs/projects/shoppingMallSpring.png"
+            alt="Project_PlayGround"
+          />
+          <div class="project_description">
+            <h3>Project_PlayGround</h3>
+            <span>Spring</span>
+          </div>
+        </a>
+        <a
+          href="https://github.com/HeathChang/Acorn_class/tree/main/WORKSPACE(MALL)/ShopMiniSpringProject_14_%EC%A3%BC%EB%AC%B8%EC%99%84%EB%A3%8C"
+          class="project"
+          target="blank"
+        >
+          <img
+            class="project_img"
+            src="imgs/projects/shoppingMallSpring.png"
             alt="shopping_mall"
           />
           <div class="project_description">
             <h3>Shopping Mall</h3>
-            <span>My first web project</span>
+            <span>Spring</span>
+          </div>
+        </a>
+        <a
+          href="https://github.com/HeathChang/Acorn_class/tree/main/WORKSPACE(MALL)/ShopMiniSpringProject_14_%EC%A3%BC%EB%AC%B8%EC%99%84%EB%A3%8C"
+          class="project"
+          target="blank"
+        >
+          <img
+            class="project_img"
+            src="imgs/projects/shoppingMallSpring.png"
+            alt="myPortfolio"
+          />
+          <div class="project_description">
+            <h3>My Portfolio</h3>
+            <span>HTML/CSS/JavaScript</span>
           </div>
         </a>
       </div>
