--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -297,7 +297,7 @@
     </section>
 
     <!--testimonials-->
-    <section id="testimonials">
+    <section id="testimonials" class="testimonials">
       <h1>Testimonials</h1>
       <h3>See what they say about me</h3>
       <div class="testimonials">
@@ -308,20 +308,36 @@
             class="testimonial_avartar"
           />
           <div class="testimonial_speachBubble">
-            <p>Hello :)</p>
+            <p>
+              The Spring Framework provides a comprehensive programming and
+              configuration model for modern Java-based enterprise applications
+              - on any kind of deployment platform. A key element of Spring is
+              infrastructural support at the application level: Spring focuses
+              on the "plumbing" of enterprise applications so that teams can
+              focus on application-level business logic, without unnecessary
+              ties to specific deployment environments.
+            </p>
             <p class="name"><a href="">His name</a>/Place he works</p>
           </div>
         </div>
         <div class="testimonial">
+          <div class="testimonial_speachBubble">
+            <p>
+              The Spring Framework provides a comprehensive programming and
+              configuration model for modern Java-based enterprise applications
+              - on any kind of deployment platform. A key element of Spring is
+              infrastructural support at the application level: Spring focuses
+              on the "plumbing" of enterprise applications so that teams can
+              focus on application-level business logic, without unnecessary
+              ties to specific deployment environments.
+            </p>
+            <p class="name"><a href="">His name</a>/Place he works</p>
+          </div>
           <img
             src="imgs/testimonial/people1.jpg"
             alt="people"
             class="testimonial_avartar"
           />
-          <div class="testimonial_speachBubble">
-            <p>Hello :)</p>
-            <p class="name"><a href="">His name</a>/Place he works</p>
-          </div>
         </div>
       </div>
     </section>
