--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -233,111 +233,115 @@
 
     <!--work-->
     <section id="work" class="work">
-      <h1>My Work</h1>
-      <h3>Projects</h3>
-      <div class="work_categories">
-        <button class="category__btn">
-          ALL <span class="category_count">4</span>
-        </button>
-        <button class="category__btn">
-          FRONT-end<span class="category_count">2</span>
-        </button>
-        <button class="category__btn">
-          BACK-end<span class="category_count">2</span>
-        </button>
-      </div>
+      <div class="section_container">
+        <h1>My Work</h1>
+        <h3>Projects</h3>
+        <div class="work_categories">
+          <button class="category__btn">
+            ALL <span class="category_count">4</span>
+          </button>
+          <button class="category__btn">
+            FRONT-end<span class="category_count">2</span>
+          </button>
+          <button class="category__btn">
+            BACK-end<span class="category_count">2</span>
+          </button>
+        </div>
 
-      <div class="work_projects">
-        <a
-          href="https://github.com/AconProject/PGservlet?organization=AconProject&organization=AconProject"
-          class="project"
-          target="blank"
-        >
-          <img
-            class="project_img"
-            src="imgs/projects/shoppingMallSpring.png"
-            alt="Project_PlayGround"
-          />
-          <div class="project_description">
-            <h3>Project_PlayGround</h3>
-            <span>Spring</span>
-          </div>
-        </a>
-        <a
-          href="https://github.com/HeathChang/Acorn_class/tree/main/WORKSPACE(MALL)/ShopMiniSpringProject_14_%EC%A3%BC%EB%AC%B8%EC%99%84%EB%A3%8C"
-          class="project"
-          target="blank"
-        >
-          <img
-            class="project_img"
-            src="imgs/projects/shoppingMallSpring.png"
-            alt="shopping_mall"
-          />
-          <div class="project_description">
-            <h3>Shopping Mall</h3>
-            <span>Spring</span>
-          </div>
-        </a>
-        <a
-          href="https://github.com/HeathChang/Acorn_class/tree/main/WORKSPACE(MALL)/ShopMiniSpringProject_14_%EC%A3%BC%EB%AC%B8%EC%99%84%EB%A3%8C"
-          class="project"
-          target="blank"
-        >
-          <img
-            class="project_img"
-            src="imgs/projects/shoppingMallSpring.png"
-            alt="myPortfolio"
-          />
-          <div class="project_description">
-            <h3>My Portfolio</h3>
-            <span>HTML/CSS/JavaScript</span>
-          </div>
-        </a>
+        <div class="work_projects">
+          <a
+            href="https://github.com/AconProject/PGservlet?organization=AconProject&organization=AconProject"
+            class="project"
+            target="blank"
+          >
+            <img
+              class="project_img"
+              src="imgs/projects/shoppingMallSpring.png"
+              alt="Project_PlayGround"
+            />
+            <div class="project_description">
+              <h3>Project_PlayGround</h3>
+              <span>Spring</span>
+            </div>
+          </a>
+          <a
+            href="https://github.com/HeathChang/Acorn_class/tree/main/WORKSPACE(MALL)/ShopMiniSpringProject_14_%EC%A3%BC%EB%AC%B8%EC%99%84%EB%A3%8C"
+            class="project"
+            target="blank"
+          >
+            <img
+              class="project_img"
+              src="imgs/projects/shoppingMallSpring.png"
+              alt="shopping_mall"
+            />
+            <div class="project_description">
+              <h3>Shopping Mall</h3>
+              <span>Spring</span>
+            </div>
+          </a>
+          <a
+            href="https://github.com/HeathChang/Acorn_class/tree/main/WORKSPACE(MALL)/ShopMiniSpringProject_14_%EC%A3%BC%EB%AC%B8%EC%99%84%EB%A3%8C"
+            class="project"
+            target="blank"
+          >
+            <img
+              class="project_img"
+              src="imgs/projects/shoppingMallSpring.png"
+              alt="myPortfolio"
+            />
+            <div class="project_description">
+              <h3>My Portfolio</h3>
+              <span>HTML/CSS/JavaScript</span>
+            </div>
+          </a>
+        </div>
       </div>
     </section>
 
     <!--testimonials-->
     <section id="testimonials" class="testimonials">
-      <h1>Testimonials</h1>
-      <h3>See what they say about me</h3>
-      <div class="testimonials">
-        <div class="testimonial">
-          <img
-            src="imgs/testimonial/people1.jpg"
-            alt="people"
-            class="testimonial_avartar"
-          />
-          <div class="testimonial_speachBubble">
-            <p>
-              The Spring Framework provides a comprehensive programming and
-              configuration model for modern Java-based enterprise applications
-              - on any kind of deployment platform. A key element of Spring is
-              infrastructural support at the application level: Spring focuses
-              on the "plumbing" of enterprise applications so that teams can
-              focus on application-level business logic, without unnecessary
-              ties to specific deployment environments.
-            </p>
-            <p class="name"><a href="">His name</a>/Place he works</p>
+      <div class="section_container">
+        <h1>Testimonials</h1>
+        <h3>See what they say about me</h3>
+        <div class="testimonials">
+          <div class="testimonial">
+            <img
+              src="imgs/testimonial/people1.jpg"
+              alt="people"
+              class="testimonial_avartar"
+            />
+            <div class="testimonial_speachBubble">
+              <p>
+                The Spring Framework provides a comprehensive programming and
+                configuration model for modern Java-based enterprise
+                applications - on any kind of deployment platform. A key element
+                of Spring is infrastructural support at the application level:
+                Spring focuses on the "plumbing" of enterprise applications so
+                that teams can focus on application-level business logic,
+                without unnecessary ties to specific deployment environments.
+              </p>
+              <p class="name"><a href="">His name</a>/Place he works</p>
+            </div>
           </div>
-        </div>
-        <div class="testimonial">
-          <div class="testimonial_speachBubble">
-            <p>
-              The Spring Framework provides a comprehensive programming and
-              configuration model for modern Java-based enterprise applications
-              - on any kind of deployment platform. A key element of Spring is
-              infrastructural support at the application level: Spring focuses
-              on the "plumbing" of enterprise applications so that teams can
-              focus on application-level business logic, without unnecessary
-              ties to specific deployment environments.
-            </p>
-            <p class="name"><a href="">His name</a>/Place he works</p>
+          <div class="testimonial">
+            <div class="testimonial_speachBubble">
+              <p>
+                The Spring Framework provides a comprehensive programming and
+                configuration model for modern Java-based enterprise
+                applications - on any kind of deployment platform. A key element
+                of Spring is infrastructural support at the application level:
+                Spring focuses on the "plumbing" of enterprise applications so
+                that teams can focus on application-level business logic,
+                without unnecessary ties to specific deployment environments.
+              </p>
+              <p class="name"><a href="">His name</a>/Place he works</p>
+            </div>
+            <img
+              src="imgs/testimonial/people1.jpg"
+              alt="people"
+              class="testimonial_avartar"
+            />
           </div>
-          <img
-            src="imgs/testimonial/people1.jpg"
-            alt="people"
-            class="testimonial_avartar"
-          />
         </div>
       </div>
     </section>
