--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -21,11 +21,6 @@
     <script src="main.js" defer></script>
   </head>
   <body>
-    <h1>Heading1</h1>
-    <h2>Heading2</h2>
-    <h3>Heading3</h3>
-
-    <p>Paragraph</p>
     <!--navbar-->
     <nav id="navbar">
       <div class="navbar__logo">
@@ -43,6 +38,10 @@
           <li class="navbar__menu__item">Contact</li>
         </ul>
       </div>
+      <!--Toggle Button-->
+      <button class="navbar_toggle-btn">
+        <i class="fas fa-bars"></i>
+      </button>
     </nav>
 
     <!--Home-->
