--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -57,7 +57,7 @@
       <h2 class="home__description">
         was a Student, am a Student, will be a Student
       </h2>
-      <button class="home__contact">Contact me</button>
+      <button class="home__contact" data-link="#contact">Contact me</button>
     </section>
 
     <!--about-->
