--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -49,15 +49,17 @@
 
     <!--Home-->
     <section id="home">
-      <img src="imgs/myPhoto.jpg" alt="Heath Photo" class="home__avatar" />
-      <h1 class="home__title">
-        Hello <br />
-        My name is Heath Chang (장현수)
-      </h1>
-      <h2 class="home__description">
-        was a Student, am a Student, will be a Student
-      </h2>
-      <button class="home__contact" data-link="#contact">Contact me</button>
+      <div class="home__container">
+        <img src="imgs/myPhoto.jpg" alt="Heath Photo" class="home__avatar" />
+        <h1 class="home__title">
+          Hello <br />
+          My name is Heath Chang (장현수)
+        </h1>
+        <h2 class="home__description">
+          was a Student, am a Student, will be a Student
+        </h2>
+        <button class="home__contact" data-link="#contact">Contact me</button>
+      </div>
     </section>
 
     <!--about-->
