--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -366,5 +366,10 @@
         Copyrightⓒ2021 HeathChang All rights reserved.
       </p>
     </section>
+
+    <!--Arrow Up-->
+    <button class="arrow-up">
+      <i class="fas fa-arrow-up"></i>
+    </button>
   </body>
 </html>
