--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -241,26 +241,27 @@
         <h1>My Work</h1>
         <h3>Projects</h3>
         <div class="work_categories">
-          <button class="category__btn">
+          <button class="category__btn active" data-filter="*">
             ALL <span class="category_count">4</span>
           </button>
-          <button class="category__btn">
-            FRONT-end<span class="category_count">2</span>
+          <button class="category__btn" data-filter="front-end">
+            FRONT-END<span class="category_count">2</span>
           </button>
-          <button class="category__btn">
-            BACK-end<span class="category_count">2</span>
+          <button class="category__btn" data-filter="back-end">
+            BACK-END<span class="category_count">2</span>
           </button>
         </div>
 
         <div class="work_projects">
           <a
-            href="https://github.com/AconProject/PGservlet?organization=AconProject&organization=AconProject"
+            href="https://github.com/HeathChang/PG_Spring"
             class="project"
             target="blank"
+            data-type="back-end"
           >
             <img
               class="project_img"
-              src="imgs/projects/shoppingMallSpring.png"
+              src="imgs/projects/project_PlayGround_Spring.png"
               alt="Project_PlayGround"
             />
             <div class="project_description">
@@ -272,10 +273,11 @@
             href="https://github.com/HeathChang/Acorn_class/tree/main/WORKSPACE(MALL)/ShopMiniSpringProject_14_%EC%A3%BC%EB%AC%B8%EC%99%84%EB%A3%8C"
             class="project"
             target="blank"
+            data-type="back-end"
           >
             <img
               class="project_img"
-              src="imgs/projects/shoppingMallSpring.png"
+              src="imgs/projects/project_shoppingMallSpring.png"
               alt="shopping_mall"
             />
             <div class="project_description">
@@ -284,13 +286,14 @@
             </div>
           </a>
           <a
-            href="https://github.com/HeathChang/Acorn_class/tree/main/WORKSPACE(MALL)/ShopMiniSpringProject_14_%EC%A3%BC%EB%AC%B8%EC%99%84%EB%A3%8C"
+            href="https://github.com/HeathChang/All_My_Works"
             class="project"
             target="blank"
+            data-type="front-end"
           >
             <img
               class="project_img"
-              src="imgs/projects/shoppingMallSpring.png"
+              src="imgs/projects/project_portfolio.png"
               alt="myPortfolio"
             />
             <div class="project_description">
