--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -241,7 +241,7 @@
         <h1>My Work</h1>
         <h3>Projects</h3>
         <div class="work_categories">
-          <button class="category__btn active" data-filter="*">
+          <button class="category__btn selected" data-filter="*">
             ALL <span class="category_count">4</span>
           </button>
           <button class="category__btn" data-filter="front-end">
